// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExploreBar component renders correctly 1`] = `
<nav
  aria-labelledby="explore-bar"
  class="ExploreBar"
>
  <h2
    class="MuiTypography-root heading Typography MuiTypography-h6"
    id="explore-bar"
  >
    Explore:
  </h2>
  <a
    aria-disabled="false"
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined Button link MuiButton-outlinedPrimary"
    href="world"
    tabindex="0"
  >
    <span
      class="MuiButton-label"
    >
      hello
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </a>
</nav>
`;

exports[`ExploreBar component renders with a link using a component 1`] = `
<nav
  aria-labelledby="explore-bar"
  class="ExploreBar"
>
  <h2
    class="MuiTypography-root heading Typography MuiTypography-h6"
    id="explore-bar"
  >
    Hello world
  </h2>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined Button link MuiButton-outlinedPrimary"
    role="button"
    tabindex="0"
    to="/world"
  >
    <span
      class="MuiButton-label"
    >
      Hello
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</nav>
`;

exports[`ExploreBar component renders with different heading 1`] = `
<nav
  aria-labelledby="explore-bar"
  class="ExploreBar"
>
  <h2
    class="MuiTypography-root heading Typography MuiTypography-h6"
    id="explore-bar"
  >
    Hello world
  </h2>
  <a
    aria-disabled="false"
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined Button link MuiButton-outlinedPrimary"
    href="/world"
    tabindex="0"
  >
    <span
      class="MuiButton-label"
    >
      Hello
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </a>
</nav>
`;

exports[`ExploreBar component renders with multiple links 1`] = `
<nav
  aria-labelledby="explore-bar"
  class="ExploreBar"
>
  <h2
    class="MuiTypography-root heading Typography MuiTypography-h6"
    id="explore-bar"
  >
    Explore:
  </h2>
  <a
    aria-disabled="false"
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined Button link MuiButton-outlinedPrimary"
    href="/tools"
    tabindex="0"
  >
    <span
      class="MuiButton-label"
    >
      Tools
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </a>
  <a
    aria-disabled="false"
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined Button link MuiButton-outlinedPrimary"
    href="/engineering-guides"
    tabindex="0"
  >
    <span
      class="MuiButton-label"
    >
      Engineering guides
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </a>
  <a
    aria-disabled="false"
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined Button link MuiButton-outlinedPrimary"
    href="/training"
    tabindex="0"
  >
    <span
      class="MuiButton-label"
    >
      Training
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </a>
  <a
    aria-disabled="false"
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined Button link MuiButton-outlinedPrimary"
    href="/frequently-asked-questions"
    tabindex="0"
  >
    <span
      class="MuiButton-label"
    >
      Frequently asked questions
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </a>
</nav>
`;
